<resources>
    <string name="app_name">Fem Care</string>
    <string name="app_name_toolbar">Fem Care</string>
    <string name="accounts_add_create">Create &amp; Switch</string>
    <string name="accounts_add_del">Delete</string>
    <string name="accounts_add_del_account">Deleted Account</string>
    <string name="accounts_add_del_sure">Are you sure to Delete this Account?</string>
    <string name="accounts_add_edit_hint">Insert your Username</string>
    <string name="accounts_add_new">Add New Account</string>
    <string name="accounts_add_swi">Switch</string>
    <string name="accounts_add_swi_account">Switch to Account</string>
    <string name="accounts_add_swi_del">Switch or Delete</string>
    <string name="accounts_add_swi_sure">Are you sure to Switch this Account?</string>
    <string name="accounts_des">Add, Edit, Switch or Delete the Account</string>
    <string name="accounts_dialog_edit">Edit Username</string>
    <string name="accounts_title">Account</string>
    <string name="activity_calendar">CALENDAR</string>
    <string name="add_note">Add a note</string>
    <string name="alarm_mancano">left</string>
    <string name="alarm_solo">Only</string>
    <string name="app_bar_font">fonts/Love.ttf</string>
    <string name="app_name_moonphase">Moon Phases</string>
    <string name="app_name_settings">Settings</string>
    <string name="average">Auto</string>
    <string name="backup_des_cloud">Backup all your data by Cloud</string>
    <string name="backup_des_email">Backup all your data by Email</string>
    <string name="backup_des_sd">Backup all your data by SD card</string>
    <string name="backup_last">Last Backup:</string>
    <string name="backup_percorso">Stored in: /storage/emulated/0/FemCare</string>
    <string name="backup_title">Backup</string>
    <string name="backup_title_sd">Backup to SD Card</string>
    <string name="backup_txt">Backup is successful to SD card</string>
    <string name="blood_title">Blood Pressure</string>
    <string name="bust_title">Bust</string>
    <string name="bust_waist_hip_title">BWH measurements</string>
    <string name="cal_disclaimer">Remember: the only fail-safe method to prevent unwanted pregnancies is abstinence from sexual intercourse. If one chooses to engage in sex, we strongly recommend understanding the risks and birth control options to mitigate those risks. Fem Care fertility and ovulation forecasts may not be accurate and precise and should not be used to prevent unwanted pregnancy. Forecast accuracy could depend on many factors including how regular one’s cycle length is, when one actually ovulates during the cycle, and how many periods have been inserted in the calendar. Anxiety, stress, diet, nutrition, exercise, environment, medications, age and other factors can also affect one\'n cycle from month to month.</string>
    <string name="cal_disclaimer_title">Disclaimer</string>
    <string name="cal_fertile">Fertile Period</string>
    <string name="cal_fertility_level_high">HIGH</string>
    <string name="cal_fertility_level_low">LOW</string>
    <string name="cal_fertility_level_medium">MEDIUM</string>
    <string name="cal_fertility_level_title">Chances of getting Pregnant</string>
    <string name="cal_fertility_level_very_high">VERY HIGH</string>
    <string name="cal_fut_period">Future possible period</string>
    <string name="cal_intimate_protected">Protected Intimate</string>
    <string name="cal_intimate_unprotected">Unprotected Intimate</string>
    <string name="cal_legenda">Legenda</string>
    <string name="cal_medicine">Take Medicine</string>
    <string name="cal_note">Note Added</string>
    <string name="cal_note_disclaimer_fertile">The prediction of the ovulation is connected to luteal phase. Luteal phase is the latter phase of the menstrual cycle. Usually this period is 14 days. You can customize the length of the luteal period tapping Setting option \"Ovulation and Fertile\" item.</string>
    <string name="cal_note_disclaimer_gommo">The intimate protection is considered condom protection.</string>
    <string name="cal_note_disclaimer_ovulation">Fertility period means the period with high chance of getting pregnant. Usually peak fertility occurs during just a few days of cycle: in general two days before and two days after the ovulation date. The default range of days set by the software is 5 days before ovulation and 1 day after.</string>
    <string name="cal_note_disclaimer_spotting">To add flow you can tap Flow in Symptoms Note options. There are five levels of Flow (very light flow/light flow/medium flow/heavy flow/very heavy flow)</string>
    <string name="cal_ovulation">Ovulation</string>
    <string name="cal_ovulation_test">Ovulation (positive tested)</string>
    <string name="cal_period">Period</string>
    <string name="cal_spotting">Flow</string>
    <string name="chart_available">No chart data available yet</string>
    <string name="chart_cycles">Cycles</string>
    <string name="chart_periods">Periods</string>
    <string name="colorDisplay">33000000</string>
    <string name="colorFutureMestruo">EFACD8</string>
    <string name="colorPreg">0abab5</string>
    <string name="colorRossoMestruo">F48BA1</string>
    <string name="colorTextOutMonth">CCCCCC</string>
    <string name="colorToday">CECECE</string>
    <string name="confirm_pin_title">Confirm your PIN</string>
    <string name="current_date">June, 2016</string>
    <string name="cycle_days">Cycle days</string>
    <string name="cycle_lenght">Cycle length</string>
    <string name="cycle_lenght_des">We use this cycle length to calculate future period start dates.</string>
    <string name="cycle_use_average">Use average</string>
    <string name="cycle_use_average_title_dialog">Use average of</string>
    <string name="day">Day</string>
    <string name="day2">Day</string>
    <string name="day_selected">Selected Date</string>
    <string name="day_today">Today</string>
    <string name="day_tomorrow">Tomorrow</string>
    <string name="day_yesterday">Yesterday</string>
    <string name="days">Days</string>
    <string name="dialog_OK">OK</string>
    <string name="dialog_cancel">cancel</string>
    <string name="dialog_cycle_info">Turn on the option, according to your previous records, use average value to predict your next period or cycle.\10\10Turn off the option, will use fixed value to predict your future period or cycle.</string>
    <string name="dialog_del_note_sure">Are you sure to Delete this daily Note?</string>
    <string name="dialog_di">of</string>
    <string name="dialog_info_avg_period">Info average period</string>
    <string name="dialog_main_ciclo">Cycle</string>
    <string name="dialog_main_ciclo_of">of</string>
    <string name="dialog_main_end_date">END DATE</string>
    <string name="dialog_main_end_date_title">Please select the end date of your period.</string>
    <string name="dialog_main_start_date">START DATE</string>
    <string name="dialog_main_start_date_title">Add Period</string>
    <string name="dialog_mood_edit">Edit Mood</string>
    <string name="dialog_no">No</string>
    <string name="dialog_pill_edit">Edit Medicine</string>
    <string name="dialog_question_save">Save changes?</string>
    <string name="dialog_reset">Reset</string>
    <string name="dialog_save">save</string>
    <string name="dialog_security_answer">Enter security Answer</string>
    <string name="dialog_security_email">Please insert your secret Question &amp; Answer. Enter also your Email Address for retrieving your Secret PIN (this is ONLY for the purpose of backing up your password).</string>
    <string name="dialog_security_email_field">Enter your Email Address</string>
    <string name="dialog_security_question">Enter security Question</string>
    <string name="dialog_security_title">Security Question &amp; PIN Backup</string>
    <string name="dialog_symptom_edit">Edit Symptom</string>
    <string name="dialog_yes">Yes</string>
    <string name="enter_pin_title">Enter your PIN</string>
    <string name="err_backup_txt">Backup Failed!</string>
    <string name="err_restore_txt">Restore Failed!</string>
    <string name="error_future_date_mestruazione">Error. You can not insert menstrual period in a future date or insert end of period without a start date.</string>
    <string name="error_future_date_title">Warning</string>
    <string name="fertility_alarm">Fertility Reminder</string>
    <string name="forgot_pin_des">Attention please, resetting your PIN will not be possible if you entered an incorrect e-mail address.\10If you could not remember or reset your PIN, the only option is to re-install the App after unistall.</string>
    <string name="fri">Fri</string>
    <string name="gommo_num_orgasm">Num. Orgasms</string>
    <string name="gommo_options_1">Condom</string>
    <string name="gommo_options_2">How many times?</string>
    <string name="gommo_options_3">Orgasm</string>
    <string name="gommo_options_protected">Protected</string>
    <string name="gommo_options_times">Sex times</string>
    <string name="gommo_options_title">Intercourse</string>
    <string name="gommo_options_unprotected">Unprotected</string>
    <string name="gommo_partner">Partner name</string>
    <string name="hip_title">Hip</string>
    <string name="intro_welcome_des">Welcome to your new \"Fem Care\" menstrual calendar. Please, enter your the beginning date of your last menstruation period. Enter also your menstruation and cycle usual periods.</string>
    <string name="intro_welcome_first_date">Start Date Last Menstruation period</string>
    <string name="intro_welcome_title">Fem Care</string>
    <string name="languages_title">Language</string>
    <string name="log_average_cycle_lenght1">Average cycle length</string>
    <string name="log_average_menstruation_lenght">Average menstruation length (last 12 months)</string>
    <string name="log_future_periods">Next predicted periods</string>
    <string name="log_intercourse">Average amount of Intercourse</string>
    <string name="log_intercourse_eff">Only sex active period</string>
    <string name="log_intercourse_month">Per month (last 12 months)</string>
    <string name="log_intercourse_week">Per week (last 12 months)</string>
    <string name="log_intercourse_year">Per year (last 12 months)</string>
    <string name="log_longest_cycle_last">Longest cycle (last 12 months)</string>
    <string name="log_orgasm">Amount of Orgasm</string>
    <string name="log_orgasm_pro">Orgasm probability</string>
    <string name="log_past_periods">Last periods</string>
    <string name="log_shortest_cycle_last">Shortest cycle (last 12 months)</string>
    <string name="log_start_cycle_12m">Last 12 months</string>
    <string name="moods_add_new">Add New Mood</string>
    <string name="moods_custom_new">Customize your Set of Moods</string>
    <string name="moods_rename_long">Click to rename</string>
    <string name="moods_show_new">Show/Hide</string>
    <string name="period_lenght">Period length</string>
    <string name="pills_add_new">Add New Medicine</string>
    <string name="pills_custom_new">Customize your Set of Pills</string>
    <string name="pills_rename_long">Click to rename</string>
    <string name="pills_show_new">Show/Hide</string>
    <string name="units_des">Change the Unit of Measurement</string>
    <string name="units_height_cm">cm</string>
    <string name="units_height_inch">inch</string>
    <string name="units_height_m">m</string>
    <string name="units_height_title">Height &amp; bust-waist-hips Unit</string>
    <string name="units_temperature_C">°C</string>
    <string name="units_temperature_F">°F</string>
    <string name="units_temperature_title">Temperature Unit</string>
    <string name="units_weight_kg">kg</string>
    <string name="units_weight_lb">lb</string>
    <string name="units_weight_stone">stone</string>
    <string name="units_weight_title">Weight Unit</string>
</resources>