<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_welcome_des" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/intro_welcome_first_date"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
        android:id="@+id/dateFirstMestruo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:picker_curved="true"
        app:picker_cyclic="true"
        app:picker_displayHours="false"
        app:picker_displayMinutes="false"
        app:picker_mustBeOnFuture="false"
        app:picker_visibleItemCount="3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cycle_lenght"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtCycleLenght"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="28"
        android:textColor="@color/colorBlack" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/period_lenght"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPeriodLenght"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="4"
        android:textColor="@color/colorBlack" />
</LinearLayout>
