<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_bg"
    >


    <TextView
        android:id="@+id/textDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/units_des"
        android:textColor="@color/colorBlack" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageQMark"
        android:layout_below="@+id/textDes"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linTemp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/textDes"
                android:orientation="vertical">

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerHorizontal="true"
                    android:alpha="0.5"
                    android:background="@color/colorBlack" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="0dp"
                        android:text="@string/units_temperature_title"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@mipmap/ic_others"
                        android:tint="@color/colorBlack"
                        />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/radioTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">

                    <RadioButton
                        android:id="@+id/radioC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/units_temperature_C"
                        android:theme="@style/RadioCheckBox" />

                    <RadioButton
                        android:id="@+id/radioF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/units_temperature_F"
                        android:theme="@style/RadioCheckBox" />
                </RadioGroup>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerHorizontal="true"
                    android:alpha="0.5"
                    android:background="@color/colorBlack" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linWeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linTemp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="0dp"
                        android:text="@string/units_weight_title"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_peso"
                        android:tint="@color/colorBlack" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/radioWeight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">

                    <RadioButton
                        android:id="@+id/radioW1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/units_weight_kg"
                        android:theme="@style/RadioCheckBox" />

                    <RadioButton
                        android:id="@+id/radioW2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/units_weight_lb"
                        android:theme="@style/RadioCheckBox" />

                    <RadioButton
                        android:id="@+id/radioW3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/units_weight_stone"
                        android:theme="@style/RadioCheckBox" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerHorizontal="true"
                    android:alpha="0.5"
                    android:background="@color/colorBlack" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linHeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linWeight"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="0dp"
                        android:text="@string/units_height_title"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imgIco3"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@mipmap/ic_misure_donna"
                        android:tint="@color/colorBlack"
                        />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/radioHeight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">

                    <RadioButton
                        android:id="@+id/radioH1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/units_height_cm"
                        android:theme="@style/RadioCheckBox" />

                    <RadioButton
                        android:id="@+id/radioH2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/units_height_m"
                        android:theme="@style/RadioCheckBox" />

                    <RadioButton
                        android:id="@+id/radioH3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/units_height_inch"
                        android:theme="@style/RadioCheckBox" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerHorizontal="true"
                    android:alpha="0.5"
                    android:background="@color/colorBlack" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageQMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:tint="@color/colorBlack"
        android:src="@mipmap/ic_unita_di_misura2" />
</RelativeLayout>
